css/gallery.css
.main__header{
  min-height: 6rem;  
  background-color: var(--third-bg-clr);
}

.gallery{
  height: 100%;
  width: 100%;
  padding-top: 10rem;
  padding-bottom: 5rem;
  background-color: var(--third-bg-clr);
}

.gallery__content{
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  gap: 5rem;
}

.gallery__pagination{
  display: flex;
  flex-direction: row;
  gap: .5rem;

}

.gallery__list{
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(4, 1fr);
  gap: 2rem;
}

.gallery__item{
  list-style: none;
}

.gallery__item.hidden {
  display: none;
}

.gallery__item:hover{
  cursor: pointer;
  scale: 1.01;
}

.gallery__img{
  display: flex;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 100%
}

.gallery__pagination-button{
  border: none;
  border-radius: 10%;
  padding: .5rem 2rem;
}

.gallery__pagination-button:hover{
  cursor: pointer;
  background-color: hsla(0, 100%, 100%, 1);
}

.gallery__pagination-numbers{
  display:flex;
  flex-direction: row;
  gap: 1rem;
}

.pagination-number{
  padding: .5rem 1rem;
  font-size: 2rem;
  border: none;
  border-radius: 10%;
  background-color: hsla(0, 100%, 100%, .7);
}

.pagination-number:hover{
  cursor: pointer;
  background-color: hsla(0, 100%, 100%, 1);
}

.pagination-number.active{
  background-color: rgb(245, 200, 133);
}

/* Enlarge image */
.gallery__large-container{
  position: absolute;
  top: 50vh;
  left: 50vw;
  transform: translate(-50%, -50%);
  z-index: 40;
  max-width: 1400px;
  width: 100%;
  max-height: 810px;
  width: 100%;
  height: 100%;
  border: 4px solid black;
  background-color: white;
  display: none;
}
.gallery__large-container.active{
  display: block;
}

.enlrarged__img{
  width:100%;
  height:100%;
}

.btn__img-large{
  position: absolute;
  background-color: white;
  margin: 0;
}

.btn__img-large:hover{
  cursor: pointer;
}

.btn__close-img{
  z-index: 40;
  top: 1%;
  right: 1%;
  padding: 1rem;
  background-color: hsla(0, 100%, 100%, 0);
}

.btn__close-img:hover{
  background-color: hsla(0, 100%, 100%, .5); 
}

.btn__prev__img, .btn__next__img{
  height: 100%;
  width: 50%;
  opacity: 0;
}

.btn__prev__img:hover, .btn__next__img:hover{
  opacity: .1;
}


.btn__prev__img{
  left: 0;

}

.btn__next__img{
  right: 0;
}

/* Media Queries */

@media (max-width: 1200px){
  .gallery__large-container{
    max-width: 90%;
    height: 90%;
  }
  
  .enlrarged__img{
    width: 100%;
  }

  .gallery__list{
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(4, 1fr);
    gap: 2rem;
    padding: 0 1rem;
  }
}

@media (max-width: 576px){
  .gallery__list{
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(4, 1fr);
    gap: 2rem;
    padding: 0 1rem;
  }
}

